// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ConventionForm /> should display idcc item once click on suggestion 1`] = `
.c1 {
  margin-top: 10px;
}

.c0 {
  color: #000;
  font-size: 1.2em;
  margin-top: 20px;
}

.c2 {
  color: #666;
  font-size: 1em;
  font-weight: bold;
  margin: 20px 0 10px 0;
}

<div>
  <form>
    <h2>
      Trouvez votre convention collective
    </h2>
    <div>
      <h3
        class="c0"
      >
        Recherche par nom ou par identifiant
      </h3>
      Saisissez l'identifiant de convention collective (IDCC) ou le nom de la branche :
      <div
        class="c1"
      >
        <a
          href="/kali/200-convention-des-poulaillers"
        >
          IDCC 
           
          - Convention des Poulaillers
        </a>
        <div
          class="btn btn__link  "
          link="true"
          role="button"
          tabindex="0"
        >
          <svg
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </div>
      </div>
      <div
        class="c2"
      >
        Comment trouver ma convention collective ?
      </div>
      <ul>
        <li>
          Elle doit figurer au 
          <b>
            bulletin de paie
          </b>
          , et sur une notice remise à l'embauche ou 
          <b>
            sur le contrat de travail
          </b>
        </li>
        <li>
          Sur l'affichage obligatoire dans l'entreprise (avec les modalités de consultation en entreprise)
        </li>
      </ul>
      <div
        class="c2"
      >
        Quelle est la convention collective applicable ?
      </div>
      <ul>
        <li>
          En principe celle relevant de l'activité principale dans l'entreprise pour les cas les plus simples.
        </li>
      </ul>
    </div>
  </form>
</div>
`;

exports[`<ConventionForm /> should render 1`] = `
.c1 {
  margin-top: 10px;
}

.c0 {
  color: #000;
  font-size: 1.2em;
  margin-top: 20px;
}

.c2 {
  color: #666;
  font-size: 1em;
  font-weight: bold;
  margin: 20px 0 10px 0;
}

<div>
  <form>
    <h2>
      Trouvez votre convention collective
    </h2>
    <div>
      <h3
        class="c0"
      >
        Recherche par nom ou par identifiant
      </h3>
      Saisissez l'identifiant de convention collective (IDCC) ou le nom de la branche :
      <div
        class="c1"
      >
        <button
          data-testid="suggest"
          type="button"
        />
      </div>
      <div
        class="c2"
      >
        Comment trouver ma convention collective ?
      </div>
      <ul>
        <li>
          Elle doit figurer au 
          <b>
            bulletin de paie
          </b>
          , et sur une notice remise à l'embauche ou 
          <b>
            sur le contrat de travail
          </b>
        </li>
        <li>
          Sur l'affichage obligatoire dans l'entreprise (avec les modalités de consultation en entreprise)
        </li>
      </ul>
      <div
        class="c2"
      >
        Quelle est la convention collective applicable ?
      </div>
      <ul>
        <li>
          En principe celle relevant de l'activité principale dans l'entreprise pour les cas les plus simples.
        </li>
      </ul>
    </div>
  </form>
</div>
`;
